@@ -1,8 +1,0 @@
-#  This file is part of systemd-genie.
-#
-# It recreates the systemd-resolved resolv.conf stub symlink on boot,
-# replacing any existing resolv.conf file.
-
-# See tmpfiles.d(5) for details
-
-L+ /etc/resolv.conf - - - - /run/systemd/resolve/stub-resolv.conf
